--- a/rag-chatbot/requirements.txt
+++ b/rag-chatbot/requirements.txt
@@ -9,3 +9,8 @@ python-dotenv>=1.0.1
 motor>=3.3.2
 python-multipart>=0.0.5
 httpx>=0.23.0
+pymongo>=3.13
+motor >=3.7.0
+passlib>=1.7.4
+bcrypt>=4.2.1 
+python-jose[cryptography]>=3.3.0
