--- a/rag-chatbot/requirements.txt
+++ b/rag-chatbot/requirements.txt
@@ -4,10 +4,11 @@ pydantic==2.6.4
 pydantic-settings==2.2.1
 beanie==1.25.0
 weaviate-client==3.24.2
-openai==1.30.1
+# openai==0.28.0
+cohere==5.13.12
 sentence-transformers==3.4.1
 python-multipart==0.0.20
-# python-dotenv==1.0.1
+python-dotenv==1.0.1
 # motor==3.3.2
 # python-multipart==0.0.5
 # httpx==0.23.0
